[gd_scene load_steps=17 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/enemy_move_1.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/enemy_move_2.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/enemy_move_3.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/enemy_move_4.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/enemy_move_5.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/enemy_move_7.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/enemy_move_6.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/enemy_move_8.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/attack_1.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/attack_2.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/attack_3.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/attack_4.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/attack_5.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "move",
"speed": 12.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 15.0233, 21.236 )

[node name="Enemy" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 2
collision_mask = 3
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "collision" ]
attack_cooldown = null
attack_radius = null
damage = null
detect_radius = null
hp = null
speed = null

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="DetectRadius" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius" index="0"]

[node name="AttackRadius" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRadius" index="0"]

[node name="Cooldown" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]

[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]

[connection signal="body_entered" from="AttackRadius" to="." method="_on_AttackRadius_body_entered"]

[connection signal="body_exited" from="AttackRadius" to="." method="_on_AttackRadius_body_exited"]

[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]


